# OMSIFontCreator

./: CMakeLists.txt  FontFile.h  OmsiFontCreator_en_001.ts  README.md  addcharacter.cpp  addcharacter.h  addcharacter.ui  customview.cpp  customview.h  fontcharacter.cpp  fontcharacter.h  fontfile.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newcharacter.ui  resources.qrc  ruler.cpp  ruler.h
